# SyncFolder

./: .gitignore  CMakeLists.txt
FolderUpdater/: CMakeLists.txt
FolderUpdater/include/: File.h  Folder.h  FolderUpdater.h  IFile.h  IFolder.h
FolderUpdater/src/: File.cpp  Folder.cpp  FolderUpdater.cpp  Main.cpp
test/: CMakeLists.txt
test/src/: FolderUpdaterTest.cpp  mainTest.cpp
